--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 			<h2>Меню</h2>
 
 			<ul>
-				<li><a href="index.html">WildFly</a></li>
-                <li><a href="../Maven/index.html">Maven</a></li>
-				<li><a href="../JSF/index.html">JSF</a></li>
-				<li><a href="../CDI/index.html">CDI</a></li>
+				<li><a href="wildfly/index.html">WildFly</a></li>
+                <li><a href="Maven/index.html">Maven</a></li>
+				<li><a href="JSF/index.html">JSF</a></li>
+				<li><a href="CDI/index.html">CDI</a></li>
 			</ul>
 		</section>
 
